--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dynamic = [
 dependencies = [
     "allianceauth>=4.3.1,<5",
     "pyarmor>=9.0.0",
+    "psycopg2-binary>=2.9.9",
 ]
 urls.Changelog = "https://github.com/ppfeufer/aa-example-plugin/blob/master/CHANGELOG.md"
 urls."Issue / Bug Reports" = "https://github.com/ppfeufer/aa-example-plugin/issues"
