--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,5 @@ path = "aa_bb/__init__.py"
 [tool.hatch.build]
 include = [
     "aa_bb/**",
-    "/pyarmor_runtime_000000"
+    "pyarmor_runtime_000000/**"
 ]
