--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "allianceauth>=4.3.1,<5",
+    "allianceauth>=4.3.1",
     "pyarmor>=9.0.0",
     "psycopg2-binary>=2.9.9",
     "allianceauth-corptools>=2.9.3",
