--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "allianceauth-corptools>=2.9.3",
     "matplotlib>=3.7.2",
+    "django-esi>=8.0.0",
 ]
 urls.Changelog = "https://github.com/ppfeufer/aa-example-plugin/blob/master/CHANGELOG.md"
 urls."Issue / Bug Reports" = "https://github.com/ppfeufer/aa-example-plugin/issues"
